--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <a routerLink="add" class="nav-link">Add</a>
       </li>
       <li class="nav-item">
-        <a routerLink="photo-upload" class="nav-link">Photo Upload</a>
+        <a routerLink="upload-images" class="nav-link">Photo Upload</a>
       </li>
     </div>
   </nav>
